override: previous images with somen's iterations

--- a/index.html
+++ b/index.html
@@ -92,28 +92,28 @@
         <div class="metricsCarousel" aria-label="Key metrics carousel">
           <div class="metricsTrack" data-metric-track data-marquee-direction="left">
             <article class="metricTile metricTile--image">
-              <img src="https://i.pinimg.com/736x/cd/a5/08/cda508fafc87c2eb5671b7dda0362e63.jpg" alt="Attendees">
+              <img src="Veloxx%20Healthcare%20Images/top%20slide/150%20delegates/Copy%20of%20_VDS2400.webp" alt="Attendees">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">1 DAY</div>
               <div class="metricTile__label">Summit</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="https://i.pinimg.com/736x/6a/61/99/6a6199e57779fec9cb78ecf42600f2a0.jpg" alt="Speakers">
+              <img src="Veloxx%20Healthcare%20Images/top%20slide/40%2B%20panelist/Copy%20of%20_VDS3250.webp" alt="Speakers">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">8+</div>
               <div class="metricTile__label">Curated sessions</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="https://i.pinimg.com/736x/26/cc/f1/26ccf1b341fe22b47fb7c751109a6ce3.jpg" alt="Delegates">
+              <img src="Veloxx%20Healthcare%20Images/top%20slide/1%20day%20summit/Copy%20of%20_VDS3139.webp" alt="Delegates">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">40+</div>
               <div class="metricTile__label">Speakers and panelists</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="https://i.pinimg.com/736x/d6/7a/ba/d67aba1d6541fe48292432cb7f442264.jpg" alt="Sessions">
+              <img src="Veloxx%20Healthcare%20Images/top%20slide/8%2Bcurated%20sessions/Copy%20of%20_VDS3871.webp" alt="Sessions">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">150+</div>
@@ -129,28 +129,28 @@
               <div class="metricTile__label">Edition</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="https://i.pinimg.com/736x/24/14/bb/2414bb946243044df3a056ef7d903c4b.jpg" alt="Summit highlight">
+              <img src="Veloxx%20Healthcare%20Images/bottom%20slide/2nd%20edition/Copy%20of%20_VDS2168.webp" alt="Summit highlight">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">13 Mar</div>
               <div class="metricTile__label">2026</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="https://i.pinimg.com/736x/1c/1d/7a/1c1d7a350ae793ec7f26d333e9873a73.jpg" alt="Networking">
+              <img src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp" alt="Networking">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">Dehradun</div>
               <div class="metricTile__label">Uttarakhand</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="https://i.pinimg.com/736x/1b/6b/ad/1b6bad70509bfad224378564da34d6c0.jpg" alt="Keynote">
+              <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp" alt="Keynote">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">100+</div>
               <div class="metricTile__label">Institutions</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="https://i.pinimg.com/736x/6b/d9/6a/6bd96a98d1748ff3c4f45eb8e3c6ef7c.jpg" alt="Panels">
+              <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp" alt="Panels">
             </article>
           </div>
         </div>
@@ -214,43 +214,43 @@
 
         <div class="wrap">
           <div class="grid">
-            <div class="card hero" style="background-image:url('https://images.unsplash.com/photo-1504814532849-9270c401a32a?auto=format&fit=crop&w=1200&q=80');">
+            <div class="card hero" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Mountain-ready%20healthcare%20delivery%20%26%20disaster%20-%20emergency%20preparedness/b845cb2ca962ae591fa3b728aec08786.webp');">
               <div class="content">
                 <h3>Community Access</h3>
                 <p>Mobile care, outreach, and last-mile delivery for underserved regions.</p>
               </div>
             </div>
-            <div class="card a" style="background-image:url('https://images.unsplash.com/photo-1579154204601-01588f351e67?auto=format&fit=crop&w=1200&q=80');">
+            <div class="card a" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Prevention,%20screening%20%26%20non-communicable%20diseases%20(NCDs)/c33292e8d39abd2fade847d25e193e42.webp');">
               <div class="content">
                 <h3>Primary Care</h3>
                 <p>Preventive screening and early intervention.</p>
               </div>
             </div>
-            <div class="card b" style="background-image:url('https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?auto=format&fit=crop&w=1200&q=80');">
+            <div class="card b" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Diagnostics%20%26%20tertiary%20care%20access%20through%20public-private%20partnerships/fc01a5aa5a74c66caf670442b6fa66d6.webp');">
               <div class="content">
                 <h3>Rural Clinics</h3>
                 <p>Strengthening facilities and essential services.</p>
               </div>
             </div>
-            <div class="card tall" style="background-image:url('https://images.unsplash.com/photo-1527613426441-4da17471b66d?auto=format&fit=crop&w=1200&q=80');">
+            <div class="card tall" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Healthcare%20workforce,%20skills%20development%20%26%20well-being/d1d5f79baac1af9242b6021d2c1f8b90.webp');">
               <div class="content">
                 <h3>Workforce</h3>
                 <p>Training, retention, and digital upskilling.</p>
               </div>
             </div>
-            <div class="card c" style="background-image:url('https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?auto=format&fit=crop&w=1200&q=80');">
+            <div class="card c" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Digital%20health%20%26%20telemedicine%20with%20ground-level%20adoption/bf9afa2f4f54f131932946d853d4745c.webp');">
               <div class="content">
                 <h3>Emergency Response</h3>
                 <p>Rapid diagnostics and triage workflows.</p>
               </div>
             </div>
-            <div class="card d" style="background-image:url('https://images.unsplash.com/photo-1457694716743-eb419114c894?auto=format&fit=crop&w=1200&q=80');">
+            <div class="card d" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Health%20system%20governance,%20data%20%26%20implementation%20excellence/6c5d8449dc8d3d028bd157072a56ab2c.webp');">
               <div class="content">
                 <h3>Digital Health</h3>
                 <p>Telemedicine and continuity of care.</p>
               </div>
             </div>
-            <div class="card e" style="background-image:url('https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=1200&q=80');">
+            <div class="card e" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/National%20Health%20Mission%20(NHM)%20as%20a%20system%20integrator/a44b206f6534352c9af121c046b6fbd7.webp');">
               <div class="content">
                 <h3>Care Delivery</h3>
                 <p>Integrated services with measurable outcomes.</p>
@@ -928,10 +928,10 @@
                   hospitals annually</p>
               </article>
               <div class="insightTile insightTile--photo" aria-hidden="true">
-                <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
+                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/63%20lakh%20people%20access%20govt%20hospitals/bb262b4a85ce088c06899f9c14e7496a.webp" alt="">
               </div>
               <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
+                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/93%20lakh%20free%20diagnostic%20tests%20delivered%20to%20~29%20lakh%20individuals/edc0f43f797ddd0fd0ad2b55d3b3acc1.webp" alt="">
               </div>
               <article class="insightTile">
                 <p class="insightTile__text"><span class="insightTile__stat">93 lakh</span> free diagnostic tests
@@ -940,7 +940,7 @@
                 </p>
               </article>
               <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
+                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/Institutional%20deliveries%20increased%20from%2037_%20to%20over%2093_/ChatGPT%20Image%20Jan%2011%2C%202026%2C%2011_02_27%20PM.webp" alt="">
               </div>
               <article class="insightTile insightTile--wide">
                 <p class="insightTile__text">Institutional deliveries increased from <span
@@ -949,7 +949,7 @@
                 </p>
               </article>
               <div class="insightTile insightTile--photo insightTile--photoWide" aria-hidden="true">
-                <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
+                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/272%20ALS-BLS%20ambulances%20strengthening%20emergency%20response/4e275d2eeec8131e5b819ca8eadbbd4a.webp" alt="">
               </div>
               <article class="insightTile">
                 <p class="insightTile__text">Atal Ayushman Uttarakhand enabled <span class="insightTile__stat">~27
@@ -957,7 +957,7 @@
                   treatments, one of the highest in India relative to population</p>
               </article>
               <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
+                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/India_s%20first%20state%20to%20offer%20completely%20free%20dialysis%2C%20benefiting%2032%2C000%2B%20patients/e530ed79532106bb954313ace17c39ae.webp" alt="">
               </div>
               <article class="insightTile">
                 <p class="insightTile__text">India's first state to offer completely free dialysis, benefiting
@@ -972,6 +972,9 @@
               <article class="insightTile">
                 <p class="insightTile__text"><span class="insightTile__stat">5,000</span> villages declared TB-free</p>
               </article>
+              <div class="insightTile insightTile--accent" aria-hidden="true">
+                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/5%2C000%20villages%20declared%20TB-free/e77650404d6227a5e8001e503a527fb0.webp" alt="">
+              </div>
             </div>
           </div>
 
@@ -979,7 +982,7 @@
             <div class="insightPanel__title">Persistent Challenges</div>
             <div class="insightTiles insightTiles--challenges">
               <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
+                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/33%2C000%20bed%20shortfall%20across%20the%20state_%20only%20194%20diagnostic%20centres%20versus%20an%20estimated%20need%20of%20~1%2C000/a7625de2e86659af29faa02ed78dddb6.webp" alt="">
               </div>
               <article class="insightTile insightTile--wide">
                 <p class="insightTile__text"><span class="insightTile__stat">~33,000</span> bed shortfall across the
@@ -994,18 +997,24 @@
                   continuity of care</p>
               </article>
               <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
+                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/86_%20mountainous%20terrain%20impacting%20access%20and%20continuity%20of%20care/e1456cadeb4b3f787f5b97d4648233db.webp" alt="">
               </div>
               <article class="insightTile">
                 <p class="insightTile__text">Specialist vacancies exceeding <span class="insightTile__stat">50%</span>
                   in several hill
                   districts</p>
               </article>
+              <div class="insightTile insightTile--accent" aria-hidden="true">
+                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/Specialist%20vacancies%20exceeding%2050_%20in%20several%20hill%20districts/e3d4322b0d6ecf157920a83176916cef.webp" alt="">
+              </div>
               <article class="insightTile">
                 <p class="insightTile__text">Acute mental health workforce shortages</p>
               </article>
+              <div class="insightTile insightTile--accent" aria-hidden="true">
+                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/Acute%20mental%20health%20workforce%20shortages/adf3c56968787cee4a0b5bcea8ab5509.webp" alt="">
+              </div>
               <div class="insightTile insightTile--photo insightTile--photoWide" aria-hidden="true">
-                <img src="https://i.pinimg.com/736x/b7/20/ce/b720ce0de6d1fbef68a50cf1d41f149d.jpg" alt="">
+                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/Advanced%20tertiary%20care%20concentrated%20in%20limited%20urban%20centres/db8848d0dea7cc8c69e541437ebd0579.webp" alt="">
               </div>
               <article class="insightTile">
                 <p class="insightTile__text">Advanced tertiary care concentrated in limited urban centres</p>
@@ -1187,6 +1196,7 @@
 </body>
 
 </html>
+
 
 
 
