override: previous images with somen's iterations

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header class="nav-bar">
     <div class="nav-inner">
       <a class="brand" href="#top" aria-label="Uttarakhand Healthcare Summit Home">
-        <img src="./velox logo.avif" alt="">
+        <img src="logo UHIS 2026.png" alt="">
       </a>
 
       <button class="nav-toggle" data-nav-toggle type="button" aria-label="Toggle menu" aria-expanded="false">
@@ -982,7 +982,7 @@
             <div class="insightPanel__title">Persistent Challenges</div>
             <div class="insightTiles insightTiles--challenges">
               <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/33%2C000%20bed%20shortfall%20across%20the%20state_%20only%20194%20diagnostic%20centres%20versus%20an%20estimated%20need%20of%20~1%2C000/a7625de2e86659af29faa02ed78dddb6.webp" alt="">
+                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/33%2C000%20bed%20shortfall%20across%20the%20state_%20only%20194%20diagnostic%20centres%20versus%20an%20estimated%20need%20of%20~1%2C000/imggg.webp" alt="">
               </div>
               <article class="insightTile insightTile--wide">
                 <p class="insightTile__text"><span class="insightTile__stat">~33,000</span> bed shortfall across the
