--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header class="nav-bar">
     <div class="nav-inner">
       <a class="brand" href="#top" aria-label="Uttarakhand Healthcare Summit Home">
-        <img src="logo UHIS 2026.png" alt="">
+        <img src="velox logo.avif" alt="">
       </a>
 
       <button class="nav-toggle" data-nav-toggle type="button" aria-label="Toggle menu" aria-expanded="false">
@@ -51,7 +51,7 @@
         <div class="hero2__brand reveal">
           <div class="hero2__logo">
             <div class="hero2__brandImg">
-              <img src="./logo UHIS 2026.webp" alt="Uttarakhand Healthcare Summit banner"
+              <img src="./logo UHIS 2026.png" alt="Uttarakhand Healthcare Summit banner"
                 class="hero2__image hero2__logoImage" loading="lazy">
 
             </div>
