fixed: persistent challenges/area of progress

--- a/index.html
+++ b/index.html
@@ -922,104 +922,127 @@
         <div class="insightPanels">
           <div class="insightPanel reveal">
             <div class="insightPanel__title">Area of Progress</div>
-            <div class="insightTiles">
-              <article class="insightTile insightTile--wide">
-                <p class="insightTile__text"><span class="insightTile__stat">~63 lakh</span> people access government
-                  hospitals annually</p>
-              </article>
-              <div class="insightTile insightTile--photo" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/63%20lakh%20people%20access%20govt%20hospitals/bb262b4a85ce088c06899f9c14e7496a.webp" alt="">
+            <section class="section" aria-label="Stats grid">
+              <div class="reveal reveal--soft is-in" style="display:none"></div>
+              <div class="stats">
+
+                <div class="left">
+                  <article class="pill pill--img reveal reveal--soft" style="--d:60ms">
+                    <div class="pill__pad">
+                      <p class="pill__kpi">~63 lakh people</p>
+                      <p class="pill__desc">access government hospitals annually</p>
+                    </div>
+                    <div class="media" aria-hidden="true">
+                      <img alt="" src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/63%20lakh%20people%20access%20govt%20hospitals/bb262b4a85ce088c06899f9c14e7496a.webp">
+                    </div>
+                  </article>
+
+                  <article class="pill pill--img reveal reveal--soft" style="--d:60ms">
+                    <div class="pill__pad">
+                      <p class="pill__desc" style="margin:0 0 8px 0;">institutional deliveries increased from</p>
+                      <p class="pill__kpi kpiBig">37% to<br>over 93%</p>
+                    </div>
+                    <div class="media" aria-hidden="true">
+                      <img alt="" src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/Institutional%20deliveries%20increased%20from%2037_%20to%20over%2093_/ChatGPT%20Image%20Jan%2011%2C%202026%2C%2011_02_27%20PM.webp">
+                    </div>
+                  </article>
+                </div>
+
+                <div class="block block--topSq midA reveal reveal--soft" style="--d:220ms">
+                  <div class="sq" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Area%20of%20Progress/93%20lakh%20free%20diagnostic%20tests%20delivered%20to%20~29%20lakh%20individuals/edc0f43f797ddd0fd0ad2b55d3b3acc1.webp');"></div>
+                  <div class="block__text">
+                    <p class="block__kpi">93 lakh free</p>
+                    <p class="block__desc">diagnostic tests delivered to ~29 lakh individuals</p>
+                  </div>
+                </div>
+
+                <div class="block block--botSq midB reveal reveal--soft" style="--d:300ms">
+                  <div class="sq" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Area%20of%20Progress/India_s%20first%20state%20to%20offer%20completely%20free%20dialysis%2C%20benefiting%2032%2C000%2B%20patients/e530ed79532106bb954313ace17c39ae.webp');"></div>
+                  <div class="block__text">
+                    <p class="block__kpi">Free dialysis</p>
+                    <p class="block__desc">benefiting 32,000+ patients statewide</p>
+                  </div>
+                </div>
+
+                <div class="right">
+                  <article class="pill pill--sq reveal reveal--soft" style="--d:420ms">
+                    <div class="sqInPill" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Area%20of%20Progress/272%20ALS-BLS%20ambulances%20strengthening%20emergency%20response/4e275d2eeec8131e5b819ca8eadbbd4a.webp');"></div>
+                    <div class="pill__pad">
+                      <p class="pill__kpi">272 ALS/BLS ambulances</p>
+                      <p class="pill__desc">strengthening emergency response</p>
+                    </div>
+                  </article>
+
+                  <article class="pill pill--sq reveal reveal--soft" style="--d:420ms">
+                    <div class="sqInPill" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Area%20of%20Progress/5%2C000%20villages%20declared%20TB-free/e77650404d6227a5e8001e503a527fb0.webp');"></div>
+                    <div class="pill__pad">
+                      <p class="pill__kpi">5,000 villages</p>
+                      <p class="pill__desc">declared TB-free across the state</p>
+                    </div>
+                  </article>
+                </div>
+
               </div>
-              <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/93%20lakh%20free%20diagnostic%20tests%20delivered%20to%20~29%20lakh%20individuals/edc0f43f797ddd0fd0ad2b55d3b3acc1.webp" alt="">
-              </div>
-              <article class="insightTile">
-                <p class="insightTile__text"><span class="insightTile__stat">93 lakh</span> free diagnostic tests
-                  delivered to
-                  <span class="insightTile__stat">~29 lakh</span> individuals
-                </p>
-              </article>
-              <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/Institutional%20deliveries%20increased%20from%2037_%20to%20over%2093_/ChatGPT%20Image%20Jan%2011%2C%202026%2C%2011_02_27%20PM.webp" alt="">
-              </div>
-              <article class="insightTile insightTile--wide">
-                <p class="insightTile__text">Institutional deliveries increased from <span
-                    class="insightTile__stat">37%</span> to over
-                  <span class="insightTile__stat">93%</span>
-                </p>
-              </article>
-              <div class="insightTile insightTile--photo insightTile--photoWide" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/272%20ALS-BLS%20ambulances%20strengthening%20emergency%20response/4e275d2eeec8131e5b819ca8eadbbd4a.webp" alt="">
-              </div>
-              <article class="insightTile">
-                <p class="insightTile__text">Atal Ayushman Uttarakhand enabled <span class="insightTile__stat">~27
-                    lakh</span> free
-                  treatments, one of the highest in India relative to population</p>
-              </article>
-              <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/India_s%20first%20state%20to%20offer%20completely%20free%20dialysis%2C%20benefiting%2032%2C000%2B%20patients/e530ed79532106bb954313ace17c39ae.webp" alt="">
-              </div>
-              <article class="insightTile">
-                <p class="insightTile__text">India's first state to offer completely free dialysis, benefiting
-                  <span class="insightTile__stat">32,000+</span> patients
-                </p>
-              </article>
-              <article class="insightTile">
-                <p class="insightTile__text"><span class="insightTile__stat">272</span> ALS/BLS ambulances strengthening
-                  emergency
-                  response</p>
-              </article>
-              <article class="insightTile">
-                <p class="insightTile__text"><span class="insightTile__stat">5,000</span> villages declared TB-free</p>
-              </article>
-              <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/5%2C000%20villages%20declared%20TB-free/e77650404d6227a5e8001e503a527fb0.webp" alt="">
-              </div>
-            </div>
+            </section>
           </div>
 
           <div class="insightPanel reveal">
             <div class="insightPanel__title">Persistent Challenges</div>
-            <div class="insightTiles insightTiles--challenges">
-              <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/33%2C000%20bed%20shortfall%20across%20the%20state_%20only%20194%20diagnostic%20centres%20versus%20an%20estimated%20need%20of%20~1%2C000/imggg.webp" alt="">
+            <section class="section" aria-label="Stats grid">
+              <div class="reveal reveal--soft is-in" style="display:none"></div>
+              <div class="stats">
+
+                <div class="left">
+                  <article class="pill pill--img reveal reveal--soft" style="--d:60ms">
+                    <div class="pill__pad">
+                      <p class="pill__kpi">~33,000 bed shortfall</p>
+                      <p class="pill__desc">only 194 diagnostic centres vs need of ~1,000</p>
+                    </div>
+                    <div class="media" aria-hidden="true">
+                      <img alt="" src="Veloxx%20Healthcare%20Images/Persistent%20challenges/33%2C000%20bed%20shortfall%20across%20the%20state_%20only%20194%20diagnostic%20centres%20versus%20an%20estimated%20need%20of%20~1%2C000/imggg.webp">
+                    </div>
+                  </article>
+
+                  <article class="pill pill--img reveal reveal--soft" style="--d:60ms">
+                    <div class="pill__pad">
+                      <p class="pill__kpi">86% mountainous terrain</p>
+                      <p class="pill__desc">impacts access and continuity of care</p>
+                    </div>
+                    <div class="media" aria-hidden="true">
+                      <img alt="" src="Veloxx%20Healthcare%20Images/Persistent%20challenges/86_%20mountainous%20terrain%20impacting%20access%20and%20continuity%20of%20care/e1456cadeb4b3f787f5b97d4648233db.webp">
+                    </div>
+                  </article>
+                </div>
+
+                <div class="block block--topSq midA reveal reveal--soft" style="--d:220ms">
+                  <div class="sq" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Persistent%20challenges/Specialist%20vacancies%20exceeding%2050_%20in%20several%20hill%20districts/e3d4322b0d6ecf157920a83176916cef.webp');"></div>
+                  <div class="block__text">
+                    <p class="block__kpi">Specialist vacancies</p>
+                    <p class="block__desc">exceeding 50% in several hill districts</p>
+                  </div>
+                </div>
+
+                <div class="block block--botSq midB reveal reveal--soft" style="--d:300ms">
+                  <div class="sq" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Persistent%20challenges/Acute%20mental%20health%20workforce%20shortages/adf3c56968787cee4a0b5bcea8ab5509.webp');"></div>
+                  <div class="block__text">
+                    <p class="block__kpi">Acute mental health</p>
+                    <p class="block__desc">workforce shortages statewide</p>
+                  </div>
+                </div>
+
+                <div class="right">
+                  <article class="pill pill--sq reveal reveal--soft" style="--d:420ms">
+                    <div class="sqInPill" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Persistent%20challenges/Advanced%20tertiary%20care%20concentrated%20in%20limited%20urban%20centres/db8848d0dea7cc8c69e541437ebd0579.webp');"></div>
+                    <div class="pill__pad">
+                      <p class="pill__kpi">Advanced tertiary care</p>
+                      <p class="pill__desc">concentrated in limited urban centres</p>
+                    </div>
+                  </article>
+                </div>
+
               </div>
-              <article class="insightTile insightTile--wide">
-                <p class="insightTile__text"><span class="insightTile__stat">~33,000</span> bed shortfall across the
-                  state; only
-                  <span class="insightTile__stat">194</span> diagnostic centres versus an estimated need of
-                  <span class="insightTile__stat">~1,000</span>
-                </p>
-              </article>
-              <article class="insightTile">
-                <p class="insightTile__text"><span class="insightTile__stat">86%</span> mountainous terrain impacting
-                  access and
-                  continuity of care</p>
-              </article>
-              <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/86_%20mountainous%20terrain%20impacting%20access%20and%20continuity%20of%20care/e1456cadeb4b3f787f5b97d4648233db.webp" alt="">
-              </div>
-              <article class="insightTile">
-                <p class="insightTile__text">Specialist vacancies exceeding <span class="insightTile__stat">50%</span>
-                  in several hill
-                  districts</p>
-              </article>
-              <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/Specialist%20vacancies%20exceeding%2050_%20in%20several%20hill%20districts/e3d4322b0d6ecf157920a83176916cef.webp" alt="">
-              </div>
-              <article class="insightTile">
-                <p class="insightTile__text">Acute mental health workforce shortages</p>
-              </article>
-              <div class="insightTile insightTile--accent" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/Acute%20mental%20health%20workforce%20shortages/adf3c56968787cee4a0b5bcea8ab5509.webp" alt="">
-              </div>
-              <div class="insightTile insightTile--photo insightTile--photoWide" aria-hidden="true">
-                <img src="Veloxx%20Healthcare%20Images/Persistent%20challenges/Advanced%20tertiary%20care%20concentrated%20in%20limited%20urban%20centres/db8848d0dea7cc8c69e541437ebd0579.webp" alt="">
-              </div>
-              <article class="insightTile">
-                <p class="insightTile__text">Advanced tertiary care concentrated in limited urban centres</p>
-              </article>
-            </div>
+            </section>
+          </div>
           </div>
         </div>
 
@@ -1196,6 +1219,7 @@
 </body>
 
 </html>
+
 
 
 
