added: devesh's iterations

--- a/index.html
+++ b/index.html
@@ -216,44 +216,56 @@
           <div class="grid">
             <div class="card hero" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Mountain-ready%20healthcare%20delivery%20%26%20disaster%20-%20emergency%20preparedness/b845cb2ca962ae591fa3b728aec08786.webp');">
               <div class="content">
-                <h3>Community Access</h3>
-                <p>Mobile care, outreach, and last-mile delivery for underserved regions.</p>
+                <h3>Mountain-ready delivery &amp; Emergency preparedness</h3>
+                <p>Mobile care, outreach, and last-mile delivery.</p>
               </div>
             </div>
             <div class="card a" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Prevention,%20screening%20%26%20non-communicable%20diseases%20(NCDs)/c33292e8d39abd2fade847d25e193e42.webp');">
               <div class="content">
-                <h3>Primary Care</h3>
+                <h3><span class="content__titleSm">Prevention, Screening &amp; NCDs</span></h3>
                 <p>Preventive screening and early intervention.</p>
               </div>
             </div>
             <div class="card b" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Diagnostics%20%26%20tertiary%20care%20access%20through%20public-private%20partnerships/fc01a5aa5a74c66caf670442b6fa66d6.webp');">
               <div class="content">
-                <h3>Rural Clinics</h3>
+                <h3><span class="content__titleSm">Diagnostics &amp; Tertiary care access via PPPs</span></h3>
                 <p>Strengthening facilities and essential services.</p>
               </div>
             </div>
             <div class="card tall" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Healthcare%20workforce,%20skills%20development%20%26%20well-being/d1d5f79baac1af9242b6021d2c1f8b90.webp');">
               <div class="content">
-                <h3>Workforce</h3>
+                <h3>Workforce, Skills Development &amp; Well-Being</h3>
                 <p>Training, retention, and digital upskilling.</p>
               </div>
             </div>
             <div class="card c" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Digital%20health%20%26%20telemedicine%20with%20ground-level%20adoption/bf9afa2f4f54f131932946d853d4745c.webp');">
               <div class="content">
-                <h3>Emergency Response</h3>
+                <h3>Digital Health &amp; Telemedicine Adoption</h3>
                 <p>Rapid diagnostics and triage workflows.</p>
               </div>
             </div>
             <div class="card d" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/Health%20system%20governance,%20data%20%26%20implementation%20excellence/6c5d8449dc8d3d028bd157072a56ab2c.webp');">
               <div class="content">
-                <h3>Digital Health</h3>
+                <h3><span class="content__titleSm">Governance, Data &amp; Implementation Excellence</span></h3>
                 <p>Telemedicine and continuity of care.</p>
               </div>
             </div>
             <div class="card e" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/National%20Health%20Mission%20(NHM)%20as%20a%20system%20integrator/a44b206f6534352c9af121c046b6fbd7.webp');">
               <div class="content">
-                <h3>Care Delivery</h3>
+                <h3><span class="content__titleSm">NHM as a System Integrator</span></h3>
                 <p>Integrated services with measurable outcomes.</p>
+              </div>
+            </div>
+            <div class="card f" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/AYUSH%20%26%20traditional%20medicine%20integration%20for%20preventive%2C%20holistic%20%26%20community%20care/c4d051eb143d8ece3d7f7f6fa0514ec0.webp');">
+              <div class="content">
+                <h3>AYUSH &amp; Traditional Medicine Integration</h3>
+                <p>Prevention, wellness, and community care.</p>
+              </div>
+            </div>
+            <div class="card g" style="background-image:url('Veloxx%20Healthcare%20Images/Key%20focus%20areas/CSR%20%26%20healthcare%20financing%20for%20sustainable%20and%20inclusive%20care/2ec16a30d29766c12bd205900f5f8271.webp');">
+              <div class="content">
+                <h3>CSR &amp; Healthcare Financing</h3>
+                <p>Funding models that expand access and equity.</p>
               </div>
             </div>
           </div>
@@ -267,12 +279,12 @@
         <div class="marquee-heading" aria-label="Sponsors and partners marquee">
           <div class="marquee-heading__inner">
             <div class="marquee-heading__group">
-              <span>PREVIOUS PARTNERS</span><span class="dot">âœº</span>
-              <span>PREVIOUS PARTNERS</span><span class="dot">âœº</span>
+              <span>PREVIOUS PARTNERS</span><span class="dot">✺</span>
+              <span>PREVIOUS PARTNERS</span><span class="dot">✺</span>
             </div>
             <div class="marquee-heading__group" aria-hidden="true">
-              <span>PREVIOUS PARTNERS</span><span class="dot">âœº</span>
-              <span>PREVIOUS PARTNERS</span><span class="dot">âœº</span>
+              <span>PREVIOUS PARTNERS</span><span class="dot">✺</span>
+              <span>PREVIOUS PARTNERS</span><span class="dot">✺</span>
             </div>
           </div>
         </div>
@@ -311,18 +323,18 @@
         <div class="marquee-heading" aria-label="Speakers marquee">
           <div class="marquee-heading__inner">
             <div class="marquee-heading__group">
-              <span>PREVIOUS SPEAKERS</span><span class="dot">*</span>
-              <span>PREVIOUS SPEAKERS</span><span class="dot">*</span>
-              <span>PREVIOUS SPEAKERS</span><span class="dot">*</span>
-              <span>PREVIOUS SPEAKERS</span><span class="dot">*</span>
-              <span>PREVIOUS SPEAKERS</span><span class="dot">*</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
             </div>
             <div class="marquee-heading__group" aria-hidden="true">
-              <span>PREVIOUS SPEAKERS</span><span class="dot">*</span>
-              <span>PREVIOUS SPEAKERS</span><span class="dot">*</span>
-              <span>PREVIOUS SPEAKERS</span><span class="dot">*</span>
-              <span>PREVIOUS SPEAKERS</span><span class="dot">*</span>
-              <span>PREVIOUS SPEAKERS</span><span class="dot">*</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
+              <span>PREVIOUS SPEAKERS</span><span class="dot">✺</span>
             </div>
           </div>
         </div>
@@ -1219,7 +1231,6 @@
 </body>
 
 </html>
-
 
 
 
